# flutter_gtk_layer_shell

./: .gitignore  pubspec.yaml
.dart_tool/: package_config.json  package_config_subset
example/: pubspec.yaml
example/lib/: event_widget.dart  main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
lib/: desktop_multi_window.dart  gtk_layer_shell.dart
lib/src/: layer_shell_controller.dart  layer_shell_controller_impl.dart  window_listener.dart
linux/: CMakeLists.txt  desktop_multi_window_plugin.cc  flutter_layer_shell.cc  flutter_layer_shell.cpp  flutter_layer_shell.h  flutter_window.cc  flutter_window.h  layer_surface.cpp  layer_surface.h  multi_window_manager.cc  multi_window_manager.h
